--- a/blog/templates/blog/posts/show.html
+++ b/blog/templates/blog/posts/show.html
@@ -7,4 +7,29 @@
     Published {{post.publish}} by {{post.author}}
 </p>
 {{post.body|linebreaks}}
+<a href="{% url 'blog:post_share' post.id %}">Share this post</a>
+{% with comments.count as total_comments%}
+<h2>
+    {{total_comments}} comment{{total_comments|pluralize}}
+</h2>
+{%endwith%}
+{%for comment in comments%}
+<div class="comment">
+    <p class="info">
+        Comment {{forloop.counter}} by {{comment.name}}
+        {{comment.created}}
+    </p>
+    {{comment.body|linebreaks}}
+</div>
+{%endfor%}
+{%if comment%}
+<h2> Your comment has been added</h2>
+{%else%}
+<h1>Share your thoughts</h1>
+<form method="post">
+    {{comment_form.as_p}}
+    {%csrf_token%}
+    <input type="submit" value="Post Comment" />
+</form>
+{%endif%}
 {% endblock %}
